@@ -1,3 +1,8 @@
+2007-09-28  Alan McGovern <alan.mcgovern@gmail.com> 
+
+	* src/File.cs, src/FileSystem.cs, src/Camera.cs: Renamed the CameraDevice
+	  property to just 'Device'
+
 2007-09-27  Alan McGovern <alan.mcgovern@gmail.com> 
 
 	* src/File.cs: Added method to help guess the mimetype
